[tool.poetry]
name = "kubernetes_asyncio_informer"
version = "0.1.0"
description = "Informer implementation for kubernetes_asyncio"
authors = ["Jacob Henner <code@ventricle.us>"]

[tool.poetry.dependencies]
python = "^3.7"
kubernetes_asyncio = "^12.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
isort = {extras = ["pyproject"], version = "^5.7.0"}
black = "^20.8b1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"